--- a/.eslintrc
+++ b/.eslintrc
@@ -46,6 +46,7 @@
     "consistent-this": [2, "self"],
     "func-names": 0,
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
+    "keyword-spacing": [2, {"before": true, "after": true, "overrides": {}}],
     "linebreak-style": [2, "unix"],
     "max-nested-callbacks": [2, 5],
     "new-cap": [2, { "capIsNew":  false }],
@@ -57,7 +58,6 @@
     "padded-blocks": [2, "never"],
     "quote-props": [2, "as-needed"],
     "quotes": [2, "double", "avoid-escape"],
-    "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
     "space-before-function-paren": [2, "never"],
     "space-in-parens": [2, "never"],
