--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metalsmith-eslint",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Metalsmith eslint plugin",
   "main": "lib/index.js",
   "scripts": {
@@ -23,17 +23,20 @@
   },
   "homepage": "https://github.com/ubenzer/metalsmith-eslint",
   "dependencies": {
-    "eslint": "^3.4.0",
-    "lodash": "^4.15.0",
-    "multimatch": "^2.1.0"
+    "eslint": "^3.7.1",
+    "lodash": "^4.16.3",
+    "mocha": "^3.1.0",
+    "multimatch": "^2.1.0",
+    "nyc": "^8.3.0",
+    "sinon": "^1.17.6"
   },
   "devDependencies": {
     "codecov": "^1.0.1",
     "metalsmith": "^2.2.0",
-    "mocha": "^3.0.2",
-    "nyc": "^8.1.0",
+    "mocha": "^3.1.0",
+    "nyc": "^8.3.0",
     "should": "^11.1.0",
-    "sinon": "^1.17.5"
+    "sinon": "^1.17.6"
   },
   "nyc": {
     "reporter": [
